syntax = "proto3";

package gRPC.Message;
option csharp_namespace = "gRPC.Message";

message AddUserRequest{
    string Name=1;
    int32 Age=2;
}
message GetUsersRequest{
}

message DeleteUserRequest{
    string Name=1;
}

message Response{
    bool IsSuccess=1;
    string ResultMsg=2;
    repeated string ResultMsgs=3;
}


service gRPCService {
    rpc AddUser(AddUserRequest) returns (Response);
    rpc GetUsers(GetUsersRequest) returns (Response);
    rpc DeleteUser(DeleteUserRequest) returns (Response);
  }